@@ -18,6 +18,7 @@ import src.main.scala.licenses.{
 import JPMSPlugin.autoImport._
 
 import java.io.File
+import java.nio.file.Paths
 
 // ============================================================================
 // === Global Configuration ===================================================
@@ -244,7 +245,10 @@ ThisBuild / scalacOptions ++= Seq(
 )
 
 ThisBuild / Test / testOptions ++=
-  Seq(Tests.Argument(TestFrameworks.ScalaTest, "-oID")) ++
+  Seq(
+    Tests.Argument(TestFrameworks.ScalaTest, "-oID"),
+    Tests.Argument(TestFrameworks.JUnit, "--verbosity=1")
+  ) ++
   sys.env
     .get("ENSO_TEST_JUNIT_DIR")
     .map { junitDir =>
@@ -283,6 +287,7 @@ lazy val enso = (project in file("."))
     `syntax-definition`,
     `syntax-rust-definition`,
     `text-buffer`,
+    yaml,
     pkg,
     cli,
     `task-progress-notifications`,
@@ -433,6 +438,45 @@ val commons = Seq(
   "commons-cli"        % "commons-cli"          % commonsCliVersion
 )
 
+// === Helidon ================================================================
+val jakartaVersion = "2.0.1"
+val helidonVersion = "4.0.8"
+val helidon = Seq(
+  "io.helidon"                 % "helidon"                     % helidonVersion,
+  "io.helidon.builder"         % "helidon-builder-api"         % helidonVersion,
+  "io.helidon.common"          % "helidon-common"              % helidonVersion,
+  "io.helidon.common"          % "helidon-common-buffers"      % helidonVersion,
+  "io.helidon.common"          % "helidon-common-config"       % helidonVersion,
+  "io.helidon.common"          % "helidon-common-configurable" % helidonVersion,
+  "io.helidon.common"          % "helidon-common-context"      % helidonVersion,
+  "io.helidon.common"          % "helidon-common-key-util"     % helidonVersion,
+  "io.helidon.common"          % "helidon-common-mapper"       % helidonVersion,
+  "io.helidon.common"          % "helidon-common-media-type"   % helidonVersion,
+  "io.helidon.common"          % "helidon-common-parameters"   % helidonVersion,
+  "io.helidon.common"          % "helidon-common-socket"       % helidonVersion,
+  "io.helidon.common"          % "helidon-common-security"     % helidonVersion,
+  "io.helidon.common"          % "helidon-common-task"         % helidonVersion,
+  "io.helidon.common"          % "helidon-common-types"        % helidonVersion,
+  "io.helidon.common"          % "helidon-common-tls"          % helidonVersion,
+  "io.helidon.common"          % "helidon-common-uri"          % helidonVersion,
+  "io.helidon.common.features" % "helidon-common-features"     % helidonVersion,
+  "io.helidon.common.features" % "helidon-common-features-api" % helidonVersion,
+  "io.helidon.config"          % "helidon-config"              % helidonVersion,
+  "io.helidon.logging"         % "helidon-logging-common"      % helidonVersion,
+  "io.helidon.inject"          % "helidon-inject-api"          % helidonVersion,
+  "io.helidon.http"            % "helidon-http"                % helidonVersion,
+  "io.helidon.http.encoding"   % "helidon-http-encoding"       % helidonVersion,
+  "io.helidon.http.media"      % "helidon-http-media"          % helidonVersion,
+  "io.helidon.webclient"       % "helidon-webclient"           % helidonVersion,
+  "io.helidon.webclient"       % "helidon-webclient-api"       % helidonVersion,
+  "io.helidon.webclient"       % "helidon-webclient-http1"     % helidonVersion,
+  "io.helidon.webclient"       % "helidon-webclient-websocket" % helidonVersion,
+  "io.helidon.webserver"       % "helidon-webserver"           % helidonVersion,
+  "io.helidon.webserver"       % "helidon-webserver-websocket" % helidonVersion,
+  "io.helidon.websocket"       % "helidon-websocket"           % helidonVersion,
+  "jakarta.inject"             % "jakarta.inject-api"          % jakartaVersion
+)
+
 // === Jackson ================================================================
 
 val jacksonVersion = "2.15.2"
@@ -494,7 +538,6 @@ val diffsonVersion          = "4.4.0"
 val directoryWatcherVersion = "0.18.0"
 val flatbuffersVersion      = "24.3.25"
 val guavaVersion            = "32.0.0-jre"
-val helidonVersion          = "4.0.8"
 val jlineVersion            = "3.23.0"
 val jgitVersion             = "6.7.0.202309050840-r"
 val kindProjectorVersion    = "0.13.2"
@@ -526,7 +569,7 @@ val snowflakeJDBCVersion    = "3.15.0"
 // ============================================================================
 
 lazy val componentModulesPaths =
-  taskKey[Def.Classpath](
+  taskKey[Seq[File]](
     "Gathers all component modules (Jar archives that should be put on module-path" +
     " as files"
   )
@@ -535,12 +578,30 @@ lazy val componentModulesPaths =
   val runtimeCp = (LocalProject("runtime") / Runtime / fullClasspath).value
   val fullCp    = (runnerCp ++ runtimeCp).distinct
   val log       = streams.value.log
-  JPMSUtils.filterModulesFromClasspath(
+  val thirdPartyModIds =
+    GraalVM.modules ++
+    GraalVM.langsPkgs ++
+    GraalVM.toolsPkgs ++
+    helidon ++
+    Seq(
+      "org.slf4j"      % "slf4j-api"       % slf4jVersion,
+      "ch.qos.logback" % "logback-classic" % logbackClassicVersion,
+      "ch.qos.logback" % "logback-core"    % logbackClassicVersion
+    )
+  val thirdPartyMods = JPMSUtils.filterModulesFromClasspath(
     fullCp,
-    JPMSUtils.componentModules,
+    thirdPartyModIds,
     log,
     shouldContainAll = true
   )
+  val thirdPartyModFiles = thirdPartyMods.map(_.data)
+  val arrow              = (`runtime-language-arrow` / Compile / packageBin).value
+  val runtime            = (`runtime-fat-jar` / assembly / assemblyOutputPath).value
+  val ourMods = Seq(
+    runtime,
+    arrow
+  )
+  ourMods ++ thirdPartyModFiles
 }
 
 lazy val compileModuleInfo = taskKey[Unit]("Compiles `module-info.java`")
@@ -691,6 +752,15 @@ lazy val `syntax-rust-definition` = project
     Compile / sourceGenerators += generateParserJavaSources,
     Compile / resourceGenerators += generateRustParserLib,
     Compile / javaSource := baseDirectory.value / "generate-java" / "java"
+  )
+
+lazy val yaml = (project in file("lib/java/yaml"))
+  .settings(
+    frgaalJavaCompilerSetting,
+    version := "0.1",
+    libraryDependencies ++= Seq(
+      "io.circe" %% "circe-yaml" % circeYamlVersion % "provided"
+    )
   )
 
 lazy val pkg = (project in file("lib/scala/pkg"))
@@ -935,7 +1005,7 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
     (Compile / run / connectInput) := true,
     commands += WithDebugCommand.withDebug,
     libraryDependencies ++= akka ++ Seq(akkaTestkit % Test),
-    libraryDependencies ++= circe,
+    libraryDependencies ++= circe ++ helidon,
     libraryDependencies ++= Seq(
       "com.typesafe"                % "config"              % typesafeConfigVersion,
       "com.github.pureconfig"      %% "pureconfig"          % pureconfigVersion,
@@ -1004,7 +1074,7 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
     Test / modulePath := {
       val updateReport = (Test / update).value
       val requiredModIds =
-        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ Seq(
+        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ Seq(
           "org.slf4j" % "slf4j-api" % slf4jVersion
         )
       val requiredMods = JPMSUtils.filterModulesFromUpdate(
@@ -1021,6 +1091,8 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
     Test / javaOptions ++= testLogProviderOptions
   )
   .settings(
+    NativeImage.smallJdk := None,
+    NativeImage.additionalCp := Seq.empty,
     rebuildNativeImage := NativeImage
       .buildNativeImage(
         "project-manager",
@@ -1135,6 +1207,7 @@ lazy val searcher = project
   .configs(Test)
   .settings(
     frgaalJavaCompilerSetting,
+    annotationProcSetting,
     libraryDependencies ++= jmh ++ Seq(
       "org.scalatest" %% "scalatest" % scalatestVersion % Test
     ) ++ logbackTest
@@ -1153,83 +1226,79 @@ lazy val `ydoc-server` = project
   .configs(Test)
   .settings(
     frgaalJavaCompilerSetting,
+    javaModuleName := "org.enso.ydoc",
     crossPaths := false,
     autoScalaLibrary := false,
-    Compile / run / fork := true,
     Test / fork := true,
-    run / connectInput := true,
-    Compile / run := (Compile / run)
-      .dependsOn(
-        Def.task {
-          import scala.sys.process._
-          "npm --workspace=enso-gui2 run build-ydoc-server-polyglot" ! streams.value.log
-        }
-      )
-      .evaluated,
-    assembly / assemblyMergeStrategy := {
-      case PathList("META-INF", file, xs @ _*) if file.endsWith(".DSA") =>
-        MergeStrategy.discard
-      case PathList("META-INF", file, xs @ _*) if file.endsWith(".SF") =>
-        MergeStrategy.discard
-      case PathList("META-INF", "MANIFEST.MF", xs @ _*) =>
-        MergeStrategy.discard
-      case PathList("META-INF", "services", xs @ _*) =>
-        MergeStrategy.concat
-      case PathList("module-info.class") =>
-        MergeStrategy.preferProject
-      case PathList(xs @ _*) if xs.last.contains("module-info.class") =>
-        MergeStrategy.discard
-      case _ => MergeStrategy.first
-    },
     commands += WithDebugCommand.withDebug,
+    // GraalVM and helidon modules (3rd party modules)
     modulePath := {
       JPMSUtils.filterModulesFromUpdate(
         update.value,
-        GraalVM.modules ++ Seq(
-          "io.helidon.builder"       % "helidon-builder-api"         % helidonVersion,
-          "io.helidon.common"        % "helidon-common"              % helidonVersion,
-          "io.helidon.common"        % "helidon-common-buffers"      % helidonVersion,
-          "io.helidon.common"        % "helidon-common-config"       % helidonVersion,
-          "io.helidon.common"        % "helidon-common-configurable" % helidonVersion,
-          "io.helidon.common"        % "helidon-common-context"      % helidonVersion,
-          "io.helidon.common"        % "helidon-common-mapper"       % helidonVersion,
-          "io.helidon.common"        % "helidon-common-media-type"   % helidonVersion,
-          "io.helidon.common"        % "helidon-common-parameters"   % helidonVersion,
-          "io.helidon.common"        % "helidon-common-socket"       % helidonVersion,
-          "io.helidon.common"        % "helidon-common-security"     % helidonVersion,
-          "io.helidon.common"        % "helidon-common-tls"          % helidonVersion,
-          "io.helidon.common"        % "helidon-common-uri"          % helidonVersion,
-          "io.helidon.config"        % "helidon-config"              % helidonVersion,
-          "io.helidon.http"          % "helidon-http"                % helidonVersion,
-          "io.helidon.http.encoding" % "helidon-http-encoding"       % helidonVersion,
-          "io.helidon.http.media"    % "helidon-http-media"          % helidonVersion,
-          "io.helidon.webclient"     % "helidon-webclient"           % helidonVersion,
-          "io.helidon.webclient"     % "helidon-webclient-api"       % helidonVersion,
-          "io.helidon.webclient"     % "helidon-webclient-http1"     % helidonVersion,
-          "io.helidon.webclient"     % "helidon-webclient-websocket" % helidonVersion,
-          "io.helidon.webserver"     % "helidon-webserver"           % helidonVersion,
-          "io.helidon.webserver"     % "helidon-webserver-websocket" % helidonVersion,
-          "io.helidon.websocket"     % "helidon-websocket"           % helidonVersion,
-          "org.slf4j"                % "slf4j-api"                   % slf4jVersion
+        GraalVM.modules ++ GraalVM.jsPkgs ++ GraalVM.chromeInspectorPkgs ++ helidon ++ Seq(
+          "org.slf4j"      % "slf4j-api"       % slf4jVersion,
+          "ch.qos.logback" % "logback-classic" % logbackClassicVersion,
+          "ch.qos.logback" % "logback-core"    % logbackClassicVersion
         ),
         streams.value.log,
         shouldContainAll = true
       )
     },
+    // Internal project modules
     modulePath ++= Seq(
       (`syntax-rust-definition` / Compile / productDirectories).value.head,
       (`profiling-utils` / Compile / productDirectories).value.head
     ),
     libraryDependencies ++= Seq(
-      "org.graalvm.polyglot" % "polyglot"                    % graalMavenPackagesVersion,
-      "org.graalvm.polyglot" % "inspect"                     % graalMavenPackagesVersion % "runtime",
-      "org.graalvm.polyglot" % "js"                          % graalMavenPackagesVersion % "runtime",
-      "org.slf4j"            % "slf4j-api"                   % slf4jVersion,
-      "io.helidon.webclient" % "helidon-webclient-websocket" % helidonVersion,
-      "io.helidon.webserver" % "helidon-webserver-websocket" % helidonVersion,
-      "junit"                % "junit"                       % junitVersion              % Test,
-      "com.github.sbt"       % "junit-interface"             % junitIfVersion            % Test
+      "org.graalvm.truffle"        % "truffle-api"                 % graalMavenPackagesVersion % "provided",
+      "org.graalvm.polyglot"       % "inspect"                     % graalMavenPackagesVersion % "runtime",
+      "org.graalvm.polyglot"       % "js"                          % graalMavenPackagesVersion % "runtime",
+      "org.slf4j"                  % "slf4j-api"                   % slf4jVersion,
+      "io.helidon.webclient"       % "helidon-webclient-websocket" % helidonVersion,
+      "io.helidon.webserver"       % "helidon-webserver-websocket" % helidonVersion,
+      "junit"                      % "junit"                       % junitVersion              % Test,
+      "com.github.sbt"             % "junit-interface"             % junitIfVersion            % Test,
+      "com.fasterxml.jackson.core" % "jackson-databind"            % jacksonVersion            % Test
     )
+  )
+  // `Compile/run` settings are necessary for the `run` task to work.
+  // We add it here for convenience so that one can start ydoc-server directly
+  // with `ydoc-server/run` task.
+  .settings(
+    Compile / run / fork := true,
+    Compile / run / connectInput := true,
+    Compile / run / javaOptions := Seq(
+      "-ea"
+    ),
+    // We need to assembly the cmd line options here manually, because we need
+    // to add path to this module, and adding that directly to the `modulePath` setting
+    // would result in an sbt caught in an infinite recursion.
+    //
+    Compile / run / javaOptions ++= {
+      val mp        = modulePath.value ++ (`profiling-utils` / modulePath).value
+      val jar       = (Compile / exportedProductJars).value.head
+      val modName   = javaModuleName.value
+      val allMp     = mp ++ Seq(jar.data.absolutePath)
+      val mainKlazz = (Compile / mainClass).value.get
+      val args = Seq(
+        "--module-path",
+        allMp.mkString(File.pathSeparator),
+        "--module",
+        modName + "/" + mainKlazz
+      )
+      args
+    },
+    Compile / resourceGenerators +=
+      Def
+        .task(
+          Ydoc.generateJsBundle(
+            (ThisBuild / baseDirectory).value,
+            baseDirectory.value,
+            (Compile / resourceManaged).value,
+            streams.value
+          )
+        )
+        .taskValue
   )
   .dependsOn(`syntax-rust-definition`)
   .dependsOn(`logging-service-logback`)
@@ -1238,7 +1307,10 @@ lazy val `ydoc-server` = project
 lazy val `persistance` = (project in file("lib/java/persistance"))
   .settings(
     version := "0.1",
+    Test / fork := true,
+    commands += WithDebugCommand.withDebug,
     frgaalJavaCompilerSetting,
+    annotationProcSetting,
     Compile / javacOptions := ((Compile / javacOptions).value),
     libraryDependencies ++= Seq(
       "org.slf4j"        % "slf4j-api"               % slf4jVersion,
@@ -1289,19 +1361,11 @@ lazy val `interpreter-dsl-test` =
     .settings(
       version := "0.1",
       frgaalJavaCompilerSetting,
+      annotationProcSetting,
       Test / fork := true,
       Test / javaOptions ++= Seq(
         "-Dpolyglotimpl.DisableClassPathIsolation=true"
       ),
-      Test / javacOptions ++= Seq(
-        "-s",
-        (Test / sourceManaged).value.getAbsolutePath
-      ),
-      Compile / logManager :=
-        sbt.internal.util.CustomLogManager.excludeMsg(
-          "Could not determine source for class ",
-          Level.Warn
-        ),
       commands += WithDebugCommand.withDebug,
       libraryDependencies ++= Seq(
         "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
@@ -1414,6 +1478,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
       "com.beachape"               %% "enumeratum-circe"     % enumeratumCirceVersion,
       "com.google.flatbuffers"      % "flatbuffers-java"     % flatbuffersVersion,
       "commons-io"                  % "commons-io"           % commonsIoVersion,
+      "com.github.pureconfig"      %% "pureconfig"           % pureconfigVersion,
       akkaTestkit                   % Test,
       "com.typesafe.akka"          %% "akka-http-testkit"    % akkaHTTPVersion           % Test,
       "org.scalatest"              %% "scalatest"            % scalatestVersion          % Test,
@@ -1457,7 +1522,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
     Test / modulePath := {
       val updateReport = (Test / update).value
       val requiredModIds =
-        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ Seq(
+        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ Seq(
           "org.slf4j" % "slf4j-api" % slf4jVersion
         )
       val requiredMods = JPMSUtils.filterModulesFromUpdate(
@@ -1506,7 +1571,8 @@ lazy val `language-server` = (project in file("engine/language-server"))
         (LocalProject("runtime") / Compile / productDirectories).value ++
         (LocalProject(
           "syntax-rust-definition"
-        ) / Compile / productDirectories).value
+        ) / Compile / productDirectories).value ++
+        (LocalProject("ydoc-server") / Compile / productDirectories).value
       val extraModsToPatch = JPMSUtils.filterModulesFromUpdate(
         (Test / update).value,
         Seq(
@@ -1552,6 +1618,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
   .dependsOn(`logging-service-logback` % "test->test")
   .dependsOn(`library-manager-test` % Test)
   .dependsOn(`runtime-version-manager-test` % Test)
+  .dependsOn(`ydoc-server`)
 
 lazy val cleanInstruments = taskKey[Unit](
   "Cleans fragile class files to force a full recompilation and preserve" +
@@ -1583,6 +1650,30 @@ lazy val truffleDslSuppressWarnsSetting = Seq(
   )
 )
 
+/** Common settings for projects whose sources are processed by some annotation
+  * processors. These settings ensure that the generated sources are placed under
+  * `(Compile/sourceManaged)` directory, usually pointing to `target/classes/src_managed`.
+  */
+lazy val annotationProcSetting = Seq(
+  Compile / javacOptions ++= Seq(
+    "-s",
+    (Compile / sourceManaged).value.getAbsolutePath,
+    "-Xlint:unchecked"
+  ),
+  Compile / compile := (Compile / compile)
+    .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
+    .value,
+  // zinc cannot see who is generating the java files so it adds some
+  // spurious warning messages. The following setting filters out such
+  // spurious warnings.
+  // See https://stackoverflow.com/questions/55558849/how-do-i-build-a-mixed-java-scala-project-which-uses-java-annotation-code-genera
+  Compile / logManager :=
+    sbt.internal.util.CustomLogManager.excludeMsg(
+      "Could not determine source for class ",
+      Level.Warn
+    )
+)
+
 /** A setting to replace javac with Frgaal compiler, allowing to use latest Java features in the code
   * and still compile down to JDK 17
   */
@@ -1607,27 +1698,20 @@ def customFrgaalJavaCompilerSettings(targetJdk: String) = Seq(
   )
 )
 
-lazy val instrumentationSettings = frgaalJavaCompilerSetting ++ Seq(
-  version := ensoVersion,
-  commands += WithDebugCommand.withDebug,
-  Compile / logManager :=
-    sbt.internal.util.CustomLogManager
-      .excludeMsg("Could not determine source for class ", Level.Warn),
-  Compile / javacOptions --= Seq(
-    "-source",
-    frgaalSourceLevel,
-    "--enable-preview"
-  ),
-  libraryDependencies ++= Seq(
-    "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
-    "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided"
-  ),
-  (Compile / javacOptions) ++= Seq(
-    "-s",
-    (Compile / sourceManaged).value.getAbsolutePath,
-    "-Xlint:unchecked"
+lazy val instrumentationSettings =
+  frgaalJavaCompilerSetting ++ annotationProcSetting ++ Seq(
+    version := ensoVersion,
+    commands += WithDebugCommand.withDebug,
+    Compile / javacOptions --= Seq(
+      "-source",
+      frgaalSourceLevel,
+      "--enable-preview"
+    ),
+    libraryDependencies ++= Seq(
+      "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided"
+    )
   )
-)
 
 lazy val `runtime-language-epb` =
   (project in file("engine/runtime-language-epb"))
@@ -1731,12 +1815,8 @@ lazy val runtime = (project in file("engine/runtime"))
   .enablePlugins(JPMSPlugin)
   .settings(
     frgaalJavaCompilerSetting,
+    annotationProcSetting,
     truffleDslSuppressWarnsSetting,
-    Compile / logManager :=
-      sbt.internal.util.CustomLogManager.excludeMsg(
-        "Could not determine source for class ",
-        Level.Warn
-      ),
     version := ensoVersion,
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
@@ -1768,18 +1848,6 @@ lazy val runtime = (project in file("engine/runtime"))
         GraalVM.toolsPkgs.map(_.withConfigurations(Some(Runtime.name)))
       necessaryModules ++ langs ++ tools
     }
-  )
-  .settings(
-    (Compile / javacOptions) ++= Seq(
-      "-s",
-      (Compile / sourceManaged).value.getAbsolutePath,
-      "-Xlint:unchecked"
-    )
-  )
-  .settings(
-    (Compile / compile) := (Compile / compile)
-      .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
-      .value
   )
   .settings(
     (Runtime / compile) := (Runtime / compile)
@@ -1817,13 +1885,9 @@ lazy val `runtime-integration-tests` =
     .enablePlugins(JPMSPlugin)
     .settings(
       frgaalJavaCompilerSetting,
-      Compile / logManager :=
-        sbt.internal.util.CustomLogManager.excludeMsg(
-          "Could not determine source for class ",
-          Level.Warn
-        ),
+      annotationProcSetting,
       commands += WithDebugCommand.withDebug,
-      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ Seq(
         "org.graalvm.polyglot" % "polyglot"              % graalMavenPackagesVersion % "provided",
         "org.graalvm.sdk"      % "polyglot-tck"          % graalMavenPackagesVersion % "provided",
         "org.graalvm.truffle"  % "truffle-api"           % graalMavenPackagesVersion % "provided",
@@ -1839,13 +1903,7 @@ lazy val `runtime-integration-tests` =
         "org.hamcrest"         % "hamcrest-all"          % hamcrestVersion           % Test,
         "org.slf4j"            % "slf4j-api"             % slf4jVersion              % Test
       ),
-      Test / javacOptions ++= Seq(
-        "-s",
-        (Compile / sourceManaged).value.getAbsolutePath,
-        "-Xlint:unchecked"
-      ),
       Test / compile := (Test / compile)
-        .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
         .dependsOn(`runtime-fat-jar` / Compile / compileModuleInfo)
         .value,
       Test / fork := true,
@@ -1870,7 +1928,7 @@ lazy val `runtime-integration-tests` =
       Test / modulePath := {
         val updateReport = (Test / update).value
         val requiredModIds =
-          GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
+          GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ Seq(
             "org.slf4j"           % "slf4j-api"               % slf4jVersion,
             "org.netbeans.api"    % "org-openide-util-lookup" % netbeansApiVersion,
             "org.graalvm.sdk"     % "polyglot-tck"            % graalMavenPackagesVersion,
@@ -1955,6 +2013,7 @@ lazy val `runtime-integration-tests` =
     .dependsOn(`logging-service-logback` % "test->test")
     .dependsOn(testkit % Test)
     .dependsOn(`connected-lock-manager-server`)
+    .dependsOn(`test-utils`)
 
 /** A project that holds only benchmarks for `runtime`. Unlike `runtime-integration-tests`, its execution requires
   * the whole `runtime-fat-jar` assembly, as we want to be as close to the enso distribution as possible.
@@ -1964,9 +2023,10 @@ lazy val `runtime-benchmarks` =
     .enablePlugins(JPMSPlugin)
     .settings(
       frgaalJavaCompilerSetting,
+      annotationProcSetting,
       // Note that withDebug command only makes sense if you use `@Fork(0)` in your benchmarks.
       commands += WithDebugCommand.withDebug,
-      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ Seq(
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ helidon ++ Seq(
         "org.openjdk.jmh"     % "jmh-core"                 % jmhVersion,
         "org.openjdk.jmh"     % "jmh-generator-annprocess" % jmhVersion,
         "jakarta.xml.bind"    % "jakarta.xml.bind-api"     % jaxbVersion,
@@ -1978,31 +2038,21 @@ lazy val `runtime-benchmarks` =
       ),
       mainClass :=
         Some("org.enso.interpreter.bench.benchmarks.RuntimeBenchmarksRunner"),
-      Compile / logManager :=
-        sbt.internal.util.CustomLogManager.excludeMsg(
-          "Could not determine source for class ",
-          Level.Warn
-        ),
       javacOptions --= Seq(
         "-source",
         frgaalSourceLevel,
         "--enable-preview"
       ),
-      javacOptions ++= Seq(
-        "-s",
-        (Compile / sourceManaged).value.getAbsolutePath,
-        "-Xlint:unchecked"
-      ),
       Compile / compile := (Compile / compile)
         .dependsOn(`runtime-fat-jar` / assembly)
-        .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
         .value,
       parallelExecution := false,
       modulePath := {
-        val requiredModIds = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
-          "org.slf4j" % "slf4j-api" % slf4jVersion,
-          "org.slf4j" % "slf4j-nop" % slf4jVersion
-        )
+        val requiredModIds =
+          GraalVM.modules ++ GraalVM.langsPkgs ++ helidon ++ Seq(
+            "org.slf4j" % "slf4j-api" % slf4jVersion,
+            "org.slf4j" % "slf4j-nop" % slf4jVersion
+          )
         val requiredMods = JPMSUtils.filterModulesFromUpdate(
           (Compile / update).value,
           requiredModIds,
@@ -2056,23 +2106,15 @@ lazy val `runtime-parser` =
   (project in file("engine/runtime-parser"))
     .settings(
       frgaalJavaCompilerSetting,
+      annotationProcSetting,
       commands += WithDebugCommand.withDebug,
       fork := true,
-      Test / javaOptions ++= Seq(
-        "-Dgraalvm.locatorDisabled=true",
-        s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
-      ),
       libraryDependencies ++= Seq(
         "junit"            % "junit"                   % junitVersion       % Test,
         "com.github.sbt"   % "junit-interface"         % junitIfVersion     % Test,
         "org.scalatest"   %% "scalatest"               % scalatestVersion   % Test,
         "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
-      ),
-      (Compile / logManager) :=
-        sbt.internal.util.CustomLogManager.excludeMsg(
-          "Could not determine source for class ",
-          Level.Warn
-        )
+      )
     )
     .dependsOn(syntax)
     .dependsOn(`syntax-rust-definition`)
@@ -2083,6 +2125,7 @@ lazy val `runtime-compiler` =
   (project in file("engine/runtime-compiler"))
     .settings(
       frgaalJavaCompilerSetting,
+      annotationProcSetting,
       (Test / fork) := true,
       libraryDependencies ++= Seq(
         "com.chuusai"     %% "shapeless"               % shapelessVersion   % "provided",
@@ -2193,11 +2236,12 @@ lazy val `runtime-fat-jar` =
               LocalProject("runtime-instrument-common"),
               LocalProject("runtime-instrument-id-execution"),
               LocalProject("runtime-instrument-repl-debugger"),
-              LocalProject("runtime-instrument-runtime-server")
+              LocalProject("runtime-instrument-runtime-server"),
+              LocalProject("ydoc-server")
             ),
             inConfigurations(Compile)
           ),
-          modulePath = JPMSUtils.componentModules
+          modulePath = JPMSUtils.componentModules ++ helidon
         )
       }
         .dependsOn(Compile / compile)
@@ -2220,7 +2264,8 @@ lazy val `runtime-fat-jar` =
           GraalVM.langsPkgs.map(_.withConfigurations(Some(Runtime.name)))
         val logbackMods =
           logbackPkg.map(_.withConfigurations(Some(Runtime.name)))
-        graalMods ++ langMods ++ logbackMods
+        val helidonMods = helidon.map(_.withConfigurations(Some(Runtime.name)))
+        graalMods ++ langMods ++ logbackMods ++ helidonMods
       }
     )
     /** Assembling Uber Jar */
@@ -2233,7 +2278,7 @@ lazy val `runtime-fat-jar` =
       assembly / test := {},
       assembly / assemblyOutputPath := file("runtime.jar"),
       assembly / assemblyExcludedJars := {
-        val pkgsToExclude = JPMSUtils.componentModules
+        val pkgsToExclude = JPMSUtils.componentModules ++ helidon
         val ourFullCp     = (Runtime / fullClasspath).value
         JPMSUtils.filterModulesFromClasspath(
           ourFullCp,
@@ -2252,6 +2297,9 @@ lazy val `runtime-fat-jar` =
           MergeStrategy.concat
         case PathList("module-info.class") =>
           MergeStrategy.preferProject
+        // remove once https://github.com/snakeyaml/snakeyaml/pull/12 gets integrated
+        case PathList("org", "yaml", "snakeyaml", "introspector", xs @ _*) =>
+          MergeStrategy.preferProject
         case PathList(xs @ _*) if xs.last.contains("module-info.class") =>
           MergeStrategy.discard
         case _ => MergeStrategy.first
@@ -2262,6 +2310,8 @@ lazy val `runtime-fat-jar` =
     .dependsOn(`runtime-instrument-repl-debugger`)
     .dependsOn(`runtime-instrument-runtime-server`)
     .dependsOn(`runtime-language-epb`)
+    .dependsOn(`ydoc-server`)
+    .dependsOn(yaml)
     .dependsOn(LocalProject("runtime"))
 
 /* Note [Unmanaged Classpath]
@@ -2303,8 +2353,11 @@ lazy val `engine-runner` = project
     assembly / test := {},
     assembly / assemblyOutputPath := file("runner.jar"),
     assembly / assemblyExcludedJars :=
-      JPMSUtils.filterTruffleAndGraalArtifacts(
-        (Compile / fullClasspath).value
+      JPMSUtils.filterArtifacts(
+        (Compile / fullClasspath).value,
+        "graalvm",
+        "truffle",
+        "helidon"
       ),
     assembly / assemblyMergeStrategy := {
       case PathList("META-INF", file, xs @ _*) if file.endsWith(".DSA") =>
@@ -2317,6 +2370,9 @@ lazy val `engine-runner` = project
         MergeStrategy.concat
       case "reference.conf" =>
         MergeStrategy.concat
+      // remove once https://github.com/snakeyaml/snakeyaml/pull/12 gets integrated
+      case PathList("org", "yaml", "snakeyaml", "introspector", xs @ _*) =>
+        MergeStrategy.preferProject
       case PathList(xs @ _*) if xs.last.contains("module-info") =>
         // runner.jar must not be a JPMS module
         MergeStrategy.discard
@@ -2339,6 +2395,69 @@ lazy val `engine-runner` = project
     run / connectInput := true
   )
   .settings(
+    NativeImage.smallJdk := Some(buildSmallJdk.value),
+    NativeImage.additionalCp := {
+      val core = Seq(
+        "runtime.jar",
+        "runner.jar"
+      )
+      core ++ `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath())
+    },
+    buildSmallJdk := {
+      val smallJdkDirectory = (target.value / "jdk").getAbsoluteFile()
+      if (smallJdkDirectory.exists()) {
+        IO.delete(smallJdkDirectory)
+      }
+      val JS_MODULES =
+        "org.graalvm.nativeimage,org.graalvm.nativeimage.builder,org.graalvm.nativeimage.base,org.graalvm.nativeimage.driver,org.graalvm.nativeimage.librarysupport,org.graalvm.nativeimage.objectfile,org.graalvm.nativeimage.pointsto,com.oracle.graal.graal_enterprise,com.oracle.svm.svm_enterprise,jdk.compiler.graal,jdk.httpserver,java.naming,java.net.http"
+      val DEBUG_MODULES  = "jdk.jdwp.agent"
+      val PYTHON_MODULES = "jdk.security.auth,java.naming"
+
+      val javaHome = Option(System.getProperty("java.home")).map(Paths.get(_))
+      val (jlink, modules, libDirs) = javaHome match {
+        case None =>
+          throw new RuntimeException("Missing java.home variable")
+        case Some(jh) =>
+          val exec = jh.resolve("bin").resolve("jlink")
+          val moduleJars = List(
+            "lib/svm/bin/../../graalvm/svm-driver.jar",
+            "lib/svm/bin/../builder/native-image-base.jar",
+            "lib/svm/bin/../builder/objectfile.jar",
+            "lib/svm/bin/../builder/pointsto.jar",
+            "lib/svm/bin/../builder/svm-enterprise.jar",
+            "lib/svm/bin/../builder/svm.jar",
+            "lib/svm/bin/../library-support.jar"
+          )
+          val targetLibDirs = List("graalvm", "svm", "static", "truffle")
+          (
+            exec,
+            moduleJars.map(jar => jh.resolve(jar).toString),
+            targetLibDirs.map(d => jh.resolve("lib").resolve(d))
+          )
+      }
+
+      val exec =
+        s"$jlink --module-path ${modules.mkString(":")} --output $smallJdkDirectory --add-modules $JS_MODULES,$DEBUG_MODULES,$PYTHON_MODULES"
+      val exitCode = scala.sys.process.Process(exec).!
+
+      if (exitCode != 0) {
+        throw new RuntimeException(s"Cannot execute smalljdk.sh")
+      }
+      libDirs.foreach(libDir =>
+        IO.copyDirectory(
+          libDir.toFile,
+          smallJdkDirectory.toPath
+            .resolve("lib")
+            .resolve(libDir.toFile.getName)
+            .toFile
+        )
+      )
+      assert(
+        smallJdkDirectory.exists(),
+        "Directory of small JDK " + smallJdkDirectory + " is not present"
+      )
+      smallJdkDirectory
+    },
     assembly := assembly
       .dependsOn(`runtime-fat-jar` / assembly)
       .value,
@@ -2350,21 +2469,19 @@ lazy val `engine-runner` = project
           additionalOptions = Seq(
             "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
             "-H:IncludeResources=.*Main.enso$",
+            // useful perf & debug switches:
             // "-g",
-            //          "-H:+DashboardAll",
-            //          "-H:DashboardDump=runner.bgv"
+            // "-H:+SourceLevelDebug",
+            // "-H:-DeleteLocalSymbols",
+            // you may need to set smallJdk := None to use following flags:
+            // "--trace-class-initialization=org.enso.syntax2.Parser",
             "-Dnic=nic"
           ),
           mainClass = Some("org.enso.runner.Main"),
-          additionalCp = Seq(
-            "runtime.jar",
-            "runner.jar"
-          ),
           initializeAtRuntime = Seq(
             "org.jline.nativ.JLineLibrary",
             "org.jline.terminal.impl.jna",
             "io.methvin.watchservice.jna.CarbonAPI",
-            "org.enso.syntax2.Parser",
             "zio.internal.ZScheduler$$anon$4",
             "org.enso.runner.Main$",
             "sun.awt",
@@ -2377,7 +2494,12 @@ lazy val `engine-runner` = project
             "akka.http"
           )
         )
+        .dependsOn(NativeImage.additionalCp)
+        .dependsOn(NativeImage.smallJdk)
         .dependsOn(assembly)
+        .dependsOn(
+          buildEngineDistribution
+        )
         .value,
     buildNativeImage := NativeImage
       .incrementalNativeImageBuild(
@@ -2387,14 +2509,19 @@ lazy val `engine-runner` = project
       .value
   )
   .dependsOn(`version-output`)
+  .dependsOn(yaml)
   .dependsOn(pkg)
   .dependsOn(cli)
   .dependsOn(`library-manager`)
   .dependsOn(`language-server`)
   .dependsOn(`edition-updater`)
+  .dependsOn(`runtime-parser`)
   .dependsOn(`logging-service`)
   .dependsOn(`logging-service-logback` % Runtime)
   .dependsOn(`polyglot-api`)
+
+lazy val buildSmallJdk =
+  taskKey[File]("Build a minimal JDK used for native image generation")
 
 lazy val launcher = project
   .in(file("engine/launcher"))
@@ -2410,6 +2537,8 @@ lazy val launcher = project
     )
   )
   .settings(
+    NativeImage.smallJdk := None,
+    NativeImage.additionalCp := Seq.empty,
     rebuildNativeImage := NativeImage
       .buildNativeImage(
         "enso",
@@ -2489,6 +2618,26 @@ lazy val `distribution-manager` = project
   .dependsOn(pkg)
   .dependsOn(`logging-utils`)
 
+lazy val `test-utils` =
+  (project in file("lib/java/test-utils"))
+    .settings(
+      frgaalJavaCompilerSetting,
+      annotationProcSetting,
+      libraryDependencies ++= GraalVM.modules,
+      libraryDependencies ++= Seq(
+        "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
+        "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided"
+      ),
+      Compile / javacOptions ++= Seq(
+        "-s",
+        (Compile / sourceManaged).value.getAbsolutePath
+      ),
+      Compile / compile := (Compile / compile)
+        .dependsOn(Def.task { (Compile / sourceManaged).value.mkdirs })
+        .value
+    )
+    .dependsOn(runtime)
+
 lazy val `benchmarks-common` =
   (project in file("lib/java/benchmarks-common"))
     .settings(
@@ -2544,6 +2693,7 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
   .enablePlugins(JPMSPlugin)
   .settings(
     frgaalJavaCompilerSetting,
+    annotationProcSetting,
     libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
       "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion,
       "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion,
@@ -2551,12 +2701,7 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
       "org.slf4j"            % "slf4j-api"                % slf4jVersion,
       "org.slf4j"            % "slf4j-nop"                % slf4jVersion
     ),
-    commands += WithDebugCommand.withDebug,
-    (Compile / logManager) :=
-      sbt.internal.util.CustomLogManager.excludeMsg(
-        "Could not determine source for class ",
-        Level.Warn
-      )
+    commands += WithDebugCommand.withDebug
   )
   .settings(
     parallelExecution := false,
@@ -2568,26 +2713,22 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
       .dependsOn(`runtime-fat-jar` / assembly)
       .value,
     Compile / javacOptions ++= Seq(
-      "-s",
-      (Compile / sourceManaged).value.getAbsolutePath,
       "-Xlint:unchecked",
       "-J-Dpolyglotimpl.DisableClassPathIsolation=true",
       "-J-Dpolyglot.engine.WarnInterpreterOnly=false"
     ),
     modulePath := {
-      val requiredModIds = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion,
+      val allRuntimeMods = componentModulesPaths.value
+      val otherModIds = Seq(
         "org.slf4j" % "slf4j-nop" % slf4jVersion
       )
       val requiredMods = JPMSUtils.filterModulesFromUpdate(
         (Compile / update).value,
-        requiredModIds,
+        otherModIds,
         streams.value.log,
         shouldContainAll = true
       )
-      val runtimeMod =
-        (`runtime-fat-jar` / assembly / assemblyOutputPath).value
-      requiredMods ++ Seq(runtimeMod)
+      allRuntimeMods ++ requiredMods
     },
     addModules := {
       val runtimeModuleName = (`runtime-fat-jar` / javaModuleName).value
@@ -3225,9 +3366,7 @@ lazy val buildEngineDistribution =
 buildEngineDistribution := {
   val _ = (`engine-runner` / assembly).value
   updateLibraryManifests.value
-  val modulesToCopy = componentModulesPaths.value.map(_.data)
-  val arrow         = Seq((`runtime-language-arrow` / Compile / packageBin).value)
-  val engineModules = Seq(file("runtime.jar")) ++ arrow
+  val modulesToCopy = componentModulesPaths.value
   val root          = engineDistributionRoot.value
   val log           = streams.value.log
   val cacheFactory  = streams.value.cacheStoreFactory
@@ -3235,7 +3374,7 @@ buildEngineDistribution := {
     distributionRoot    = root,
     cacheFactory        = cacheFactory,
     log                 = log,
-    jarModulesToCopy    = modulesToCopy ++ engineModules,
+    jarModulesToCopy    = modulesToCopy,
     graalVersion        = graalMavenPackagesVersion,
     javaVersion         = graalVersion,
     ensoVersion         = ensoVersion,
@@ -3259,8 +3398,7 @@ lazy val buildEngineDistributionNoIndex =
 buildEngineDistributionNoIndex := {
   val _ = (`engine-runner` / assembly).value
   updateLibraryManifests.value
-  val modulesToCopy = componentModulesPaths.value.map(_.data)
-  val engineModules = Seq(file("runtime.jar"))
+  val modulesToCopy = componentModulesPaths.value
   val root          = engineDistributionRoot.value
   val log           = streams.value.log
   val cacheFactory  = streams.value.cacheStoreFactory
@@ -3268,7 +3406,7 @@ buildEngineDistributionNoIndex := {
     distributionRoot    = root,
     cacheFactory        = cacheFactory,
     log                 = log,
-    jarModulesToCopy    = modulesToCopy ++ engineModules,
+    jarModulesToCopy    = modulesToCopy,
     graalVersion        = graalMavenPackagesVersion,
     javaVersion         = graalVersion,
     ensoVersion         = ensoVersion,
@@ -3507,7 +3645,7 @@ updateLibraryManifests := {
     JPMSUtils
       .filterModulesFromClasspath(
         fullCp,
-        JPMSUtils.componentModules,
+        JPMSUtils.componentModules ++ helidon,
         log,
         shouldContainAll = true
       )
